--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "angular-uuid": "^0.0.4",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
