--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@fortawesome/angular-fontawesome": "^1.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "angular-uuid": "^0.0.4",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "json-server": "^1.0.0-beta.3",
+    "ngx-explorer": "^5.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^11.0.3",
